deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    app: myapp2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp2
  template:
    metadata:
      name: nginx-2
      labels:
        app: myapp2
    spec:
      containers:
        - name: nginx
          image: a218876dt9musea2crglobal.azurecr.io/nginx
          # image: nginx
