pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test2
  labels:
    app: nginx
    tier: frontend
spec:
  containers:
  - name: nginx
    image: nginx
