sqlsrv.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sqlsrv
  name: sqlsrv
spec:
  containers:
  - image: nginx
    name: sqlsrv
    resources: {}
