test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ngnix
  name: ngnix
spec:
  containers:
  - image: nginx
    name: ngnix
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
