spring-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-basics
spec:
  selector:
    matchLabels:
      app: spring-basics
  template:
    metadata:
      labels:
        app: spring-basics
    spec:
      containers:
      - name: spring-basic
        image: kingnathanal/spring-basic:0.2.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
      #- name: logger-babe
      #  image: nginx
      #  resources: {}
      #  command: ['sh', '-c', 'curl http://localhost:8080/']
---
apiVersion: v1
kind: Service
metadata:
  name: spring-basics
spec:
  selector:
    app: spring-basics
  ports:
  - port: 9080
    targetPort: 8080
