test_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-service
  name: test-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-service
  type: NodePort
status:
  loadBalancer: {}
